gccida/g3/move_deaths
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12349:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v40; // rbp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12354:6: error: use of undeclared identifier 'v45'
rtx *v45; // r8 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12355:6: error: use of undeclared identifier 'v46'
rtx *v46; // r14 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12362:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12362:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12371:6: error: use of undeclared identifier 'v62'
rtx *v62; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12373:6: error: use of undeclared identifier 'v64'
rtx *v64; // r14 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12374:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v65; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12377:4: error: expected ';' after expression
rtx v68; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12377:5: error: use of undeclared identifier 'v68'
rtx v68; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12379:4: error: expected ';' after expression
rtx v70; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12379:5: error: use of undeclared identifier 'v70'
rtx v70; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12398:6: error: use of undeclared identifier 'v89'
rtx *v89; // [rsp+10h] [rbp-68h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12399:6: error: use of undeclared identifier 'v90'
rtx *v90; // [rsp+10h] [rbp-68h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12400:4: error: expected ';' after expression
rtx note; // [rsp+18h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12400:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+18h] [rbp-60h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12402:4: error: expected ';' after expression
rtx v93; // [rsp+20h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12402:5: error: use of undeclared identifier 'v93'
rtx v93; // [rsp+20h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12403:6: error: use of undeclared identifier 'pnotesa'; did you mean 'pnotes'?
rtx *pnotesa; // [rsp+28h] [rbp-50h] 
     ^~~~~~~
     pnotes
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/combine.c:12316:81: note: 'pnotes' declared here
void  move_deaths( rtx x, rtx maybe_kill_insn, int from_cuid, rtx to_insn, rtx *pnotes) 
                                                                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_deaths/src/obj/combine.o] Error 1
